--- a/docs/resumes/李明.md
+++ b/docs/resumes/李明.md
@@ -1,70 +1,135 @@
-李明
-电话：19700202816  |  邮箱：a13427528132 @163.com  |  求职意向： 数据开发/数据分析 |  求职城市：广州
-教育背景
-华南理工大学 — 会计学                  学士学位                  2015.09---2019.06
-工作经历
-友邦资讯科技（广州）有限公司（外包）               数据开发工程师               2021.11——2024.11
-需求分析：参与用户需求讨论会议，确认用户需求，分析需求的可行性并用Visio和Power BI做demo，提供两种或
-两种以上的解决方案，展示其优劣势给用户选择；
-方案设计：根据业务需求，用Visio设计ETL流程，用Figma或者Power BI设计报表UI界面及交互关系；参与自动
-化刷新数据、数据权限控制等用户痛点问题的解决方案设计；
-数据建模：根据业务数据的结构、维度，用SSMS进行数据库建模或用Power Query处理数据后在Power BI内为报
-表构建符合性能的星星模型、雪花模型或者星座模型；
-数据清洗：根据用户需求，从CSV、Excel、业务系统等不同数据源获取源数据，用ADF建立数据管道进行数据清洗，
-开发了10+个复杂的数据转换步骤，将清洗后的数据存储在SQL Server数据库中，确保数据准确性和完整性，将多个
-ETL作业自动化，实现自动化刷新报表、发送邮件等功能，减少了手动操作的时间和错误率；
-报表开发：与BA、业务部门等不同岗位、不同团队的同事沟通协作，参与2个从0到1的BI项目并用Power BI成功
-开发了4份用户友好型报表，参与2个报表重开发项目，用Power BI重新设计方案并开发报表，报表主题涵盖财务、
-销售渠道、保险理赔等业务主题，累计重开发报表20+份；
-问题修复：开发完成后进行单元测试，以确保开发质量进入集成测试和用户接受测试阶段；在集成测试和用户接受测试
-阶段负责测试案例的执行，通过SQL脚本查询数据确保报表数据的准确性以及其他功能性的实现，用Jira追踪测试执行
-和问题修复进度，确保测试通过率为100%；
-性能优化：优化现有ETL流程，将数据加载时间减少50%，提高了数据处理效率，分析报表的可优化部分并提出优化方
-案，在数据模型、简化度量值、报表性能等方面进行优化，最终报表性能平均提升35%；
-项目运维：项目交付后，监控ETL管道和报表的自动刷新情况，若有问题则快速分析原因并定位修复；
-技术文档：用Excel、Word或PPT输出符合公司项目流程要求的各类技术文档，包括技术设计文档，单元测试报告
-等，累计输出文档20+份；
-拓展学习：项目之余拓展学习其他工具技术，包括Python、Power Apps、Power Automate等，不定期与同事交流
-分享技术，已自学获得PCEP等认证。
-招商银行信用卡中心（外包）                 信用卡客户经理                   2020.07——2021.06
-客户拓展：通过陌生拜访、公司客户资源跟进、分支行驻点营销等方式进行信用卡销售，月平均获客80+，最高月销售
-量可达130+；
-客户维护：通过添加客户微信维护关系，及时解答客户的用卡疑问，并经营朋友圈每周推送1-2次信用卡活动；
-驻点服务：进驻分支行营业厅，负责大厅客户服务，累计进驻30+合作企业，负责工资卡和信用卡办理及开卡服务。
-广州飞月信息科技有限公司                  游戏运营专员                   2020.06——2020.07数据收集：通过埋点获取用户行为数据，监控公司旗下各个海外小游戏的用户数据，制作日报并分析背后的原因，为游
-戏策划与开发提供相关建议； 
-竞品分析：体验、了解竞品游戏并收集相关信息，用PPT输出竞品分析报告；
-平台关系维护：对接各平台有关负责人，根据公司需求，探讨制定个性化的数据监控解决方案。
-项目经历
-集团财务数据集市项目                                BI开发                              2021.11---2024.06
-和安永印度IT咨询团队沟通协作，负责2份财务业务主题报表的数据建模、重开发、单元测试以及问题修复；
-安永IT咨询团队撤场后，独立优化报表，简化数据模型和度量值，最终报表性能平均提升35%，获得了用户的肯定与好
-评；
-在集团财务部门已有的40+份简单报表的基础上，根据业务需求增加新页面，累计新开发30+页，优化源SQL代码、简
-化数据模型、精简度量值，使开发文件大小平均缩小50%左右；
-参与设计用户提交数据自动化及数据权限控制解决方案，为用户优化、简化日常工作流程，解决了集团财务部用户日常
-工作中的痛点问题。
-通过SQL脚本在数据库中查询数据，测试报表数据的准确性和业务逻辑的正确性，确保测试通过率为100%
-战略银行合作伙伴项目                                 BI开发                              2023.04---2024.08
-和公司内部业务分析、数据清洗等不同岗位同事沟通协作，负责2份战略银行合作伙伴业务主题报表从0到1的外观设
-计、数据建模、报表开发、单元测试、问题修复以及上线运维等任务；
-需求分析阶段为用户提供多样性的选择方案，为用户解决了报表随数据源刷新而自动刷新、自助下载自定义组合数据等
-痛点，在测试阶段修复问题确保测试通过率为100%，最终报表成功上线，顺利运行；
-在系统集成测试进度落后的阶段，带领两位新加入项目的同事熟悉报表及明确测试方法、标准和任务，负责审核2份报
-表的测试案例同时单独负责3份报表的问题修复，多线程开展任务，最终在有限的时间内成功追赶进度，让整个项目按
-时进入到用户接受度测试阶段。
-医疗保健报表项目                                         BI开发                             2024.06---
-2024.07
-负责2份医疗保健业务主题报表从0到1的ETL流程设计、报表UI设计、数据建模、报表开发、单元测试、问题修复
-以及上线运维等任务；
-设计阶段分析需求，为用户提供多样的可拓展的解决方案，开发阶段开发了10+个复杂的数据转换步骤，用于从源数据
-格式到目标格式的转换，处理超过百万的原始数据并将其加载到数据仓库中，确保数据准确性和完整性，将多个ETL作
-业自动化，实现自动化刷新报表、发送邮件等功能，测试阶段快速定位问题并修复，确保测试通过率为100%，最终按
-计划成功上线1份报表并顺利运行；
-时间有限的情况下，独立负责1份在用户体验路线中非常重要的首页报表的设计开发工作，跨部门沟通解决了多数据源
-自动获取数据的难点问题，让首页报表成功上线运行，获得了集团高层决策者的肯定与好评。
-技能／证书及其他
-技能： 熟练使用Office、Power BI、Power Query、Figma、Jira、ADF、SQL Server等工具；熟悉SQL、
-Tableau、Python、Power Apps、Power Automate
-证书／执照：PCEPTM认证、微软AI-102证书、FCA-Fine BI认证、FCA-Fine Report认证
-语言能力：CET-6，可作为工作语言
+# 李明 - Web开发工程师
+
+## 个人信息
+- **姓名：** 李明
+- **性别：** 男
+- **年龄：** 28岁
+- **联系电话：** 138-0000-1234
+- **邮箱：** liming.dev@email.com
+- **GitHub：** https://github.com/liming-dev
+- **个人网站：** https://liming-portfolio.com
+- **现居地：** 北京市朝阳区
+
+## 求职意向
+- **目标岗位：** Web开发工程师
+- **期望薪资：** 15K-20K
+- **工作性质：** 全职
+- **到岗时间：** 随时
+
+## 教育背景
+**北京理工大学** | 2016.09 - 2020.06
+- 专业：计算机科学与技术（本科）
+- 主要课程：数据结构与算法、计算机网络、数据库原理、软件工程、Web开发技术
+- GPA：3.6/4.0
+
+## 工作经验
+
+### 高级前端开发工程师 | 字节跳动科技有限公司 | 2022.03 - 2024.11
+**主要职责：**
+- 负责公司核心产品的前端架构设计与开发，使用React + TypeScript技术栈
+- 参与需求分析和技术方案设计，与产品、设计、后端团队紧密协作
+- 优化前端性能，页面加载速度提升40%，用户体验显著改善
+- 负责代码审查和技术分享，指导初级开发人员成长
+
+**主要成果：**
+- 主导开发了公司内容管理系统，日活用户超过10万
+- 建立了前端组件库和开发规范，提升团队开发效率30%
+- 实现了微前端架构，支持多团队并行开发
+
+### Web全栈开发工程师 | 美团点评 | 2020.07 - 2022.02
+**主要职责：**
+- 负责商家端Web应用的前后端开发，使用Vue.js + Node.js技术栈
+- 设计和开发RESTful API，处理高并发业务场景
+- 参与数据库设计和优化，使用MySQL和Redis
+- 负责系统监控和线上问题排查，确保系统稳定运行
+
+**主要成果：**
+- 开发了商家数据分析平台，为商家提供实时业务洞察
+- 优化了订单处理系统，响应时间从2秒降低到500ms
+- 实现了自动化部署流程，部署效率提升60%
+
+## 技术技能
+
+### 前端技术
+- **核心技术：** HTML5、CSS3、JavaScript (ES6+)、TypeScript
+- **框架/库：** React、Vue.js、Angular、jQuery
+- **状态管理：** Redux、Vuex、MobX
+- **构建工具：** Webpack、Vite、Rollup、Gulp
+- **CSS预处理：** Sass、Less、Stylus
+- **UI框架：** Ant Design、Element UI、Material-UI
+
+### 后端技术
+- **编程语言：** Node.js、Python、Java
+- **框架：** Express.js、Koa.js、Django、Spring Boot
+- **数据库：** MySQL、PostgreSQL、MongoDB、Redis
+- **消息队列：** RabbitMQ、Apache Kafka
+
+### 开发工具与环境
+- **版本控制：** Git、SVN
+- **开发工具：** VS Code、WebStorm、IntelliJ IDEA
+- **容器化：** Docker、Kubernetes
+- **云服务：** AWS、阿里云、腾讯云
+- **监控工具：** Sentry、New Relic、Grafana
+
+### 其他技能
+- **测试：** Jest、Mocha、Cypress、Selenium
+- **API设计：** RESTful API、GraphQL
+- **性能优化：** 前端性能优化、数据库优化、缓存策略
+- **项目管理：** Agile、Scrum、JIRA、Confluence
+
+## 项目经验
+
+### 企业级内容管理系统 | 2023.06 - 2024.08
+**项目描述：** 为企业客户开发的内容管理和发布平台，支持多媒体内容编辑、审核流程和数据分析。
+
+**技术栈：** React + TypeScript + Node.js + MySQL + Redis + Docker
+
+**主要贡献：**
+- 设计并实现了富文本编辑器，支持图片、视频、表格等多种内容类型
+- 开发了实时协作功能，多用户可同时编辑同一文档
+- 实现了权限管理系统，支持细粒度的权限控制
+- 优化了大文件上传功能，支持断点续传和进度显示
+
+**项目成果：** 系统上线后获得客户高度认可，签约企业客户超过200家
+
+### 电商平台移动端应用 | 2021.03 - 2022.01
+**项目描述：** 开发响应式电商平台，支持商品展示、购物车、支付、订单管理等完整电商流程。
+
+**技术栈：** Vue.js + Vuex + Element UI + Express.js + MongoDB
+
+**主要贡献：**
+- 实现了商品搜索和筛选功能，支持多维度筛选和排序
+- 开发了购物车和订单管理模块，集成了多种支付方式
+- 实现了商品推荐算法，提升了用户转化率15%
+- 优化了移动端性能，首屏加载时间控制在2秒内
+
+**项目成果：** 平台月活用户达到50万，月交易额突破1000万
+
+### 实时数据可视化大屏 | 2020.09 - 2021.02
+**项目描述：** 为运营团队开发的实时数据监控大屏，展示业务关键指标和趋势分析。
+
+**技术栈：** React + D3.js + WebSocket + Python + PostgreSQL
+
+**主要贡献：**
+- 使用D3.js开发了多种图表组件，支持实时数据更新
+- 实现了WebSocket连接，确保数据实时性
+- 开发了数据ETL流程，从多个数据源聚合数据
+- 设计了响应式布局，适配不同尺寸的显示设备
+
+**项目成果：** 大屏系统帮助运营团队及时发现业务异常，响应速度提升50%
+
+## 个人特点
+- **技术热情：** 关注Web开发前沿技术，积极学习新框架和工具
+- **问题解决：** 具备强大的问题分析和解决能力，能快速定位和修复线上问题
+- **团队协作：** 良好的沟通能力和团队合作精神，能与不同角色的同事高效协作
+- **代码质量：** 注重代码规范和可维护性，坚持编写高质量的代码
+- **持续学习：** 保持学习热情，定期参加技术会议和培训
+
+## 获得荣誉
+- 2024年：字节跳动年度优秀员工
+- 2023年：前端技术分享最佳讲师
+- 2022年：美团点评技术创新奖
+- 2021年：开源项目贡献者认证
+
+## 自我评价
+我是一名经验丰富的Web开发工程师，拥有4年以上的全栈开发经验。精通现代前端框架和后端技术，具备完整的Web应用开发能力。在工作中注重用户体验和代码质量，善于与团队协作，能够独立承担复杂项目的设计和开发工作。对新技术保持敏锐的嗅觉，持续关注行业发展趋势，致力于通过技术创新为公司创造价值。
